--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Welcome to Our Platform</h1>
+        <h1>Don't Be A Nut, Save Your Nuts.</h1>
     </header>
 
     <main>
