--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,8 +19,8 @@
         {{#unless loggedIn}}
         <div class="login-area">
             <form action="/login" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username">
+                <label for="email">Email:</label>
+                <input type="text" id="username" name="email">
                 
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password">
