--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <header>
         <h2><a href="/">Home</a></h2>
         <h1>Don't Be A Nut, Save Your Nuts.</h1>
-        <h2><a href="/login">login</a></h2>
+        <h2><a href="/">login</a></h2>
     </header>
 
 
