--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -21,9 +21,8 @@
     <footer>
         Copyright © 2023 by Company Name.
     </footer>
-<script src="../public/js/login.js"></script>
 </body>
-</html>
+</html> --}}
 
 {{!-- <!DOCTYPE html>
 <html lang="en">
