--- a/views/partials/expenses.handlebars
+++ b/views/partials/expenses.handlebars
@@ -25,26 +25,30 @@
 <!-- Expense Entry Form -->
 <div class="expense-form">
     <h3>Add New Expense:</h3>
-    <form method="POST" action="/addExpense">
+    <form class="form add-expense">
       <div class="form-group">
         <label for="date">Date:</label>
-        <input type="date" name="date" id="date" required>
+        <input class="form-input" type="date" name="date" id="date" required>
       </div>
       <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" name="name" id="name" required>
+        <input class="form-input" type="text" name="name" id="name" required>
       </div>
       <div class="form-group">
         <label for="type">Type:</label>
-        <input type="text" name="type" id="type" required>
+        <input class="form-input" type="text" name="type" id="type" required>
       </div>
       <div class="form-group">
         <label for="amount">Amount:</label>
-        <input type="number" name="amount" id="amount" required>
+        <input class="form-input" type="number" name="amount" id="amount" required>
       </div>
-      <button type="submit">Add Expense</button>
+      <div class="form-group">
+        <button lass="btn btn-primary" type="submit">Add Expense</button>
+      </div>
     </form>
 </div>
+
+<script src="/js/expense-script.js"></script>
 
 {{!-- <section class="expenses">
     <h3>Welcome {{user.username}}!</h3>
