--- a/views/expenses.handlebars
+++ b/views/expenses.handlebars
@@ -54,12 +54,12 @@
         <input class="form-input" type="number" name="amount" id="amount" required>
       </div>
       <div class="form-group">
-        <button lass="btn btn-primary" type="submit">Add Expense</button>
+        <button class="btn btn-primary" type="submit">Add Expense</button>
       </div>
     </form>
 </div>
 
-<script src="/js/expense-script.js"></script>
+<script src="/js/expense-script.js" ></script>
 
 {{!-- <section class="expenses">
     <h3>Welcome {{user.username}}!</h3>
