--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,46 +4,47 @@ body, h1, h2 {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: #f0f0f0;
     padding: 20px;
+    color: #333;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end; 
-    background-image: url("../images/headerbg.webp") ;
-    padding: 10px;
+    align-items: flex-end;
+    background-image: url("../images/headerbg.webp");
+    padding: 20px;
     min-height: 30vh;
     border-radius: 20px;
-    background-size: cover; 
-    background-position: center; 
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
+    border-bottom: 5px solid #a5c04a;
 }
 
 header h1 {
     margin: 0;
-    font-size: 2.5em; 
+    font-size: 2.5em;
     flex-grow: 1;
     text-align: center;
     color: #e1e1e1;
-    font-weight: bold; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 header a {
     text-decoration: none;
-    color: #fff;
-    font-weight: bold; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    color: #a5c04a;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
-
 
 main {
     max-width: 1200px;
-    min-height: 60vh ;
+    min-height: 60vh;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
@@ -58,3 +59,65 @@ footer {
     background-color: #333;
     color: #fff;
 }
+
+
+.row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.justify-space-between-md {
+    justify-content: space-between;
+}
+
+.login-card {
+    background-color: #fff;
+    border: 1px solid #e1e1e1;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 50%; 
+    margin-bottom: 20px;
+}
+
+.page-title {
+    font-size: 1.8em;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group {
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.form-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #e1e1e1;
+    border-radius: 5px;
+}
+
+.btn {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-primary {
+    background-color: #a5c04a;
+    color: #fff;
+}
+
+.btn-primary:hover {
+    background-color: #94a941;
+}
+
