--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/* Global styles */
 body, h1, h2 {
     margin: 0;
     padding: 0;
@@ -7,10 +8,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     background-color: #f0f0f0;
-    padding: 20px;
     color: #333;
+    padding: 20px;
 }
 
+/* Header styles */
 header {
     display: flex;
     justify-content: space-between;
@@ -42,6 +44,7 @@ header a {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
+/* Main styles */
 main {
     max-width: 1200px;
     min-height: 60vh;
@@ -53,6 +56,7 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Footer styles */
 footer {
     text-align: center;
     padding: 10px;
@@ -60,24 +64,14 @@ footer {
     color: #fff;
 }
 
-
-.row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.justify-space-between-md {
-    justify-content: space-between;
-}
-
+/* Login and Signup styles */
 .login-card {
     background-color: #fff;
     border: 1px solid #e1e1e1;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 50%; 
+    width: 80%;
     margin-bottom: 20px;
 }
 
@@ -87,40 +81,28 @@ footer {
     margin-bottom: 10px;
 }
 
-.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .form-group {
-    width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .form-input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #e1e1e1;
+    border: 1px solid #a5c04a;
     border-radius: 5px;
-}
-
-.btn {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    box-sizing: border-box;
 }
 
 .btn-primary {
     background-color: #a5c04a;
     color: #fff;
+    border: 1px solid #a5c04a;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.btn-primary:hover {
-    background-color: #94a941;
-}
-
+/* Expenses styles */
 .expenses-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -158,10 +140,10 @@ th {
 }
 
 .expense-form {
-    max-width: 1200px;
+    max-width: 600px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #f9f9f9;
     border: 1px solid #e1e1e1;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -170,5 +152,5 @@ th {
 .expense-form h3 {
     font-size: 1.8em;
     color: #333;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
