--- a/views/expenses.handlebars
+++ b/views/expenses.handlebars
@@ -1,17 +1,6 @@
-<script id="expenses-template" type="text/x-handlebars-template">
-    {{#each expenses}}
-        <tr>
-            <td>{{date}}</td>
-            <td>{{name}}</td>
-            <td>{{type}}</td>
-            <td>${{amount}}</td>
-        </tr>
-    {{/each}}
-</script>
-
 <div class="expenses-container">
   <h2>Your Expenses</h2>
-  <table>
+  <table id="expenses-table">
     <thead>
       <tr>
         <th>Date</th>
@@ -54,12 +43,12 @@
         <input class="form-input" type="number" name="amount" id="amount" required>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Add Expense</button>
+        <button lass="btn btn-primary" type="submit">Add Expense</button>
       </div>
     </form>
 </div>
 
-<script src="/js/expense-script.js" ></script>
+<script src="/js/expense-script.js"></script>
 
 {{!-- <section class="expenses">
     <h3>Welcome {{user.username}}!</h3>
