--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,9 @@
 <body>
     <header>
         <h1>Don't Be A Nut, Save Your Nuts.</h1>
+    {{#if loggedIn}}
+        <button id="logout-button">Logout</button>
+    {{/if}}
     </header>
     <main>
     {{#if loggedIn}}
