--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,3 +154,21 @@ th {
     color: #333;
     margin-bottom: 20px;
 }
+
+#logout-button {
+    background-color: #8B4513; /* Saddle Brown */
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#logout-button:hover {
+    background-color: #A0522D; /* Sienna */
+}
