--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
     {{/if}}
     </main>
     <footer>
-        Copyright © 2023 by Company Name.
+        Copyright © 2023 by Joseph Walshing his Ever Handy Johnson.
     </footer>
 </body>
 </html>
