--- a/views/partials/expenses.handlebars
+++ b/views/partials/expenses.handlebars
@@ -43,12 +43,15 @@
         <input class="form-input" type="number" name="amount" id="amount" required>
       </div>
       <div class="form-group">
-        <button lass="btn btn-primary" type="submit">Add Expense</button>
+        <button class="btn btn-primary" type="submit">Add Expense</button>
       </div>
     </form>
 </div>
 
+
 <script src="/js/expense-script.js"></script>
+
+
 
 
 
