--- a/views/partials/expenses.handlebars
+++ b/views/partials/expenses.handlebars
@@ -4,8 +4,7 @@
     <thead>
       <tr>
         <th>Date</th>
-        <th>Name</th>
-        <th>Type</th>
+        <th>Item</th>
         <th>Amount</th>
       </tr>
     </thead>
@@ -13,8 +12,7 @@
       {{#each expenses}}
         <tr>
           <td>{{date}}</td>
-          <td>{{name}}</td>
-          <td>{{type}}</td>
+          <td>{{item}}</td>
           <td>${{amount}}</td>
         </tr>
       {{/each}}
@@ -31,12 +29,8 @@
         <input class="form-input" type="date" name="date" id="date" required>
       </div>
       <div class="form-group">
-        <label for="name">Name:</label>
-        <input class="form-input" type="text" name="name" id="name" required>
-      </div>
-      <div class="form-group">
-        <label for="type">Type:</label>
-        <input class="form-input" type="text" name="type" id="type" required>
+        <label for="item">Item:</label>
+        <input class="form-input" type="text" name="item" id="item" required>
       </div>
       <div class="form-group">
         <label for="amount">Amount:</label>
