--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -16,7 +16,7 @@
     </form>
   </div>
   <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+    <h2 class="page-title">Signup:</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
