--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,3 +197,52 @@ th {
       padding: 10px;
     }
   }
+
+  .row {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+     
+    margin: 0; 
+    flex-direction: column;
+}
+
+  .modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
+  
+  .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: white;
+    border: 1px solid #000;
+    z-index: 2;
+    width: 50%;
+    border-radius: 5px;
+  }
+  
+  .close-btn {
+    color: #000;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close-btn:hover,
+  .close-btn:focus {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  
