--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -15,15 +15,7 @@
       </div>
     </form>
   </div>
-
- <div>
-    <button id="signup-btn" class="btn btn-primary">Signup</button>
-  </div>
-</div>
-
-  <div id="signup-modal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn">&times;</span>
+  <div class="login-card">
     <h2 class="page-title">Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
@@ -40,24 +32,5 @@
     </form>
   </div>
 </div>
-
-
-  {{!-- <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div> --}}
 
 <script src="/js/login-script.js"></script>
