added fix to merge

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 <body>
     <header>
         
-        <h1>Don't Be A Nut, Save Your Nuts.</h1>
+        <h1><u>NutStash</u><br>Don't Be A Nut, Save Your Nuts.</h1>
     {{#if loggedIn}}
         <button id="logout-button">Logout</button>
     {{/if}}
